--- a/style.css
+++ b/style.css
@@ -22,11 +22,11 @@
     padding: 25px;
     position: relative;
     transition: 0.6s;
-    border-radius: 13px;
 }
 
 .col:nth-child(1) {
     background: #283491;
+    border-radius: 15px 0px 0px 15px;
 }
 
 .col:nth-child(2) {
@@ -35,6 +35,7 @@
 
 .col:nth-child(3) {
     background: #6ee2f1;
+    border-radius: 0px 15px 15px 0px;
 }
 
 h2 {
